<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">
    <LinearLayout
        android:id="@+id/topLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/credential_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:theme="@style/TextViewMedium"
            android:text="@string/user_registration_label" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Enter email or Mobile num" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
               android:layout_weight="1"
            android:hint="Enter password"
            android:inputType="textPassword" />

           <ImageButton
            android:id="@+id/button_eye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Password_eye"
               android:layout_weight="4"
               android:background="#0000"
            android:layout_marginRight="10dp"
               android:layout_marginTop="16dp"
            android:src="@drawable/ic_eye" />
       </LinearLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/register" />

        <GridLayout
            android:id="@+id/other_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:rowCount="2"
            android:columnCount="2">

            <Button
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:background="#0000"
                android:theme="@style/MessengerButton"
                android:textSize="16sp"
                android:text="@string/register" />

            <Button
                android:text="@string/forget_passwd"
                android:id="@+id/fpasswdlink"
                android:layout_gravity="center"
                android:background="#0000"
                android:layout_width="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_log_in_button"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:text="@string/sign_in" />

        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="Sign In"
            android:id="@+id/fb_login_button"
            android:layout_margin="17dp"
            android:layout_gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </GridLayout>

        <EditText
            android:id="@+id/editTextVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Enter Verification Code"
            android:visibility="gone"
            android:maxLength="6"
            android:inputType="number" />

        <TextView
            android:id="@+id/resendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Resend code"
            android:visibility="gone"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:visibility="gone"
            android:text="@string/verify" />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/llprogressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:padding="13dp">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/loading_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/loading" />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>

</FrameLayout>