...
    <string-array name="currency_array">
        <item>INR</item>
        <item>Dollar</item>
        <item>Pound</item>
    </string-array>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
...
    <string name="menu_profile">Profile</string>
    <string name="set_password">Set Password</string>
    <string name="facebook_app_id">660597487682365</string>
    <string name="fb_login_protocol_scheme">fb660597487682365</string>
    <string name="web_client_id">541393111812-0rtguglbv2reet3rj50qd565jphodcml.apps.googleusercontent.com</string>
    <string name="forget_passwd"><u>Forget Password</u></string>
    <string name="loginLabel">Login</string>
    <string name="RegisterLink"><u>Register</u></string>
    <string name="RegisterLabel">Create Account</string>
    <string name="LoginLink"><u>Login</u></string>
    <string name="phone_ver">Verification</string>
    <string name="page_type_login">L</string>
    <string name="alert_dialog_set_delete_title">Delete?</string>
    <string name="alert_dialog_delete_permission_text">Are you sure you want to delete this account?</string>
...
